--- a/home/.config/polybar/config
+++ b/home/.config/polybar/config
@@ -33,11 +33,12 @@ col = $(xrdb:color4)
 [bar/top]
 locale = fr_FR.UTF-8
 monitor = ${env:MONITOR:HDMI-1}
-;dpi=96
-width = 100%
-height = 20
-offset-x = 0
-offset-y = 0
+bottom = true
+dpi=96
+width = 966px
+height = 20px
+offset-x = 200px
+offset-y = 4px
 background = ${colors.background}
 foreground = ${colors.foreground}
 border-size = 0
@@ -45,13 +46,13 @@ border-color = #00000000
 line-size = 3
 line-color = {$xrdb:color1}
 padding-left = 0
-padding-right = 1
+padding-right = 0
 module-margin-left = 1
 module-margin-right = 1
-font-0 = PragmataPro Nerd Font:Bold:size=9;2
-font-1 = AwesomeFont:size=10;2
-modules-left = bspwm mpd
-modules-right = home volume vpn wlan eth battery temperature xkeyboard date
+font-0 = PragmataPro Nerd Font:Bold:size=9;3
+font-1 = AwesomeFont:size=10;3
+modules-left = bspwm
+modules-right = xkeyboard home temperature volume battery vpn wlan eth date
 tray-position = right
 tray-padding = 0
 
@@ -66,9 +67,9 @@ type = internal/xkeyboard
 blacklist-0 = num lock
 format-prefix = 
 format-prefix-foreground = ${colors.foreground-alt}
-format-prefix-underline = ${colors.secondary}
+;format-prefix-underline = ${colors.secondary}
 label-layout = %layout%
-label-layout-underline = ${colors.secondary}
+;label-layout-underline = ${colors.secondary}
 label-indicator-padding = 2
 label-indicator-margin = 1
 label-indicator-background = ${colors.secondary}
@@ -86,18 +87,18 @@ label-unmounted-foreground = ${colors.foreground-alt}
 type = internal/fs
 interval = 25
 mount-0 = /home
-label-mounted = %free%
+label-mounted =  %free%
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.foreground-alt}
 
 [module/bspwm]
 type = internal/bspwm
 label-focused = %index%
-label-focused-background = ${colors.background-alt}
-label-focused-underline= ${xrdb:color15}
+label-focused-background = ${colors.primary}
+;label-focused-underline= ${xrdb:color15}
 label-focused-padding = 2
 label-occupied = %index%
-label-occupied-underline = ${colors.primary}
+label-occupied-background = ${colors.background-alt}
 label-occupied-padding = 2
 label-urgent = %index%!
 label-urgent-background = ${colors.alert}
@@ -139,7 +140,7 @@ type = internal/network
 interface = wlo1
 interval = 3.0
 format-connected = <ramp-signal> <label-connected>
-format-connected-underline = ${xrdb:color5}
+;format-connected-background = ${colors.primary}
 label-connected = %essid%
 format-disconnected =
 ramp-signal-0 = 😱
@@ -154,7 +155,7 @@ ramp-signal-foreground = ${colors.foreground-alt}
 type = internal/network
 interface = eno1
 interval = 3.0
-format-connected-underline = ${xrdb:color2}
+format-connected-background = ${colors.primary}
 format-connected-prefix = " "
 format-connected-prefix-foreground = ${colors.foreground-alt}
 label-connected = %local_ip%
@@ -170,15 +171,15 @@ format-prefix = " "
 [module/date]
 type = internal/date
 interval = 5
-date = %a %d %b 
-time =  %H:%M
-format-underline = ${xrdb:color12}
+date = " %a %d %b"
+time = "%H:%M "
+format-background = ${colors.primary}
 label = %date% %time%
 
 [module/volume]
 type = internal/volume
 format-volume = <label-volume> 
-label-volume = VOL %percentage%%
+label-volume =  %percentage%%
 label-volume-foreground = ${root.foreground}
 format-muted-prefix = " "
 format-muted-foreground = ${colors.foreground-alt}
@@ -190,7 +191,7 @@ full-at = 98
 battery = BAT0
 adapter = ADP1
 format-charging = <animation-charging> <label-charging>
-format-charging-underline = ${xrdb:color3}
+;format-charging-underline = ${xrdb:color3}
 animation-charging-0 = 
 animation-charging-1 = 
 animation-charging-2 = 
@@ -199,7 +200,7 @@ animation-charging-4 = 
 animation-charging-foreground = ${colors.foreground-alt}
 animation-charging-framerate = 750
 format-discharging = <ramp-capacity> <label-discharging> 
-format-discharging-underline = ${self.format-charging-underline}
+;format-discharging-underline = ${self.format-charging-underline}
 ramp-capacity-0 = 
 ramp-capacity-1 = 
 ramp-capacity-2 = 
@@ -208,18 +209,18 @@ ramp-capacity-4 = 
 ramp-capacity-foreground = ${colors.foreground-alt}
 format-full-prefix = " "
 format-full-prefix-foreground = ${colors.foreground-alt}
-format-full-underline = ${self.format-charging-underline}
+;format-full-underline = ${self.format-charging-underline}
 
 [module/temperature]
 type = internal/temperature
 thermal-zone = 0
 warn-temperature = 60
-label = %temperature%
+label =  %temperature%
 format = <label>
-format-underline = ${xrdb:color1}
-label-warn = %temperature%
+;format-underline = ${xrdb:color1}
+label-warn =  %temperature%
 format-warn = <label-warn>
-format-warn-underline = ${self.format-underline}
+;format-warn-underline = ${self.format-underline}
 label-warn-foreground = ${colors.secondary}
 
 [settings]
