Revert "updated the whole mail setup (still not perfect)"
This reverts commit d5234b31ad95c658ed18b6f2d48b8cfda765bfc3.

--- a/home/.msmtprc
+++ b/home/.msmtprc
@@ -4,19 +4,18 @@ auth on
 tls on
 tls_nocertcheck
 
-# yyy
-account yyy
-from mail.yyy@gmail.com
-user mail.yyy@gmail.com
-password "password"
+# ProtonMail
+account ProtonMail
+from username@pm.me
+user username@pm.me
+password "<password>"
+host 127.0.0.1
+port 1025
+
+# Gmail
+account Gmail
+from username@gmail.com
+user username@gmail.com
+password "<password>"
 host smtp.gmail.com
 port 587
-
-# xxx
-account xxx
-from mail.xxx@custom-gmail.fr
-user mail.xxx@custom-gmail.fr
-password "password"
-host smtp.gmail.com
-port 587
-
